# Compression-cost-optimization

./: .gitignore  Cargo.toml  README.md
paper_results/: benefit-bzip2_enwiki-20240101-pages-meta-history1.xml-p1p844.html  benefit-enwiki.html  benefit-gzip_enwiki-20240101-langlinks.sql.html  benefit-gzip_enwiki-20240101-pagelinks.sql.html  benefit-png_space.html  benefit-png_venice.png.html  benefit-xz2_enwiki-20240101-pages-meta-history1.xml-p1p844.html  convex-hull-bzip2_enwiki-20240101-pages-meta-history1.xml-p1p844.html  convex-hull-enwiki.html  convex-hull-gzip_enwiki-20240101-langlinks.sql.html  convex-hull-gzip_enwiki-20240101-pagelinks.sql.html  convex-hull-png_space.html  convex-hull-png_venice.png.html  convex-hull-xz2_enwiki-20240101-pages-meta-history1.xml-p1p844.html
src/: algorithms.rs  convex_hull.rs  lib.rs  main.rs  mixing_policy.rs  workload.rs
src/algorithms/: bzip2.rs  felics.rs  gzip.rs  jpegxl.rs  losslessjpeg.rs  png.rs  xz2.rs
