[package]
name = "mix_compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
bzip2 = "0.4"
xz2 = "0.1"
plotly = "0.8.4"
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.9.0"