[package]
name = "mix_compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
bzip2 = "0.4"
xz2 = "0.1"
plotly = "0.8.4"
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.9.0"
rand = "0.8.5"

image = { version = "0.24.8", optional = true, features = ["png"]}
felics = {git = "https://github.com/visanalexandru/felics", optional = true}
zune-jpegxl = {version = "0.4.0", optional = true}
zune-core = {version = "0.4.12", optional = true}
jpeg-decoder = {version = "0.3", optional = true}

[features]
image = ["dep:image", "dep:felics", "dep:zune-jpegxl", "dep:zune-core", "dep:jpeg-decoder"]